--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
-    name: options-trading-bot
+    name: Flask-Trading-Bot
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
+    envVars:
+      - key: PORT
+        value: 10000
